# quant-explorer

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
artifacts/results/: cross_runtime.json  cross_runtime.md  dynamic_int8.json  fp32_baseline.json  full_results.json  multi_model.json  multi_pareto.md  pareto.md  qat_int8.json  static_int8_per_channel.json  static_int8_per_tensor.json
artifacts/weights/: dynamic_int8.pt  fp32_baseline.pt  qat_int8.pt  static_int8_per_channel.pt  static_int8_per_tensor.pt
artifacts/weights/onnx/: dynamic_int8.onnx  fp32_baseline.onnx  static_int8_per_channel.onnx  static_int8_per_tensor.onnx
docs/: README.md  cross_runtime.md  methodology.md  quantization.md
scripts/: bench_regress_check.py
src/quant_explorer/: __init__.py  cli.py  data.py  model.py  models.py  settings.py  train.py
src/quant_explorer/bench/: __init__.py  latency.py  memory.py  multi_model.py  size.py
src/quant_explorer/eval/: __init__.py  accuracy.py
src/quant_explorer/onnx_rt/: __init__.py  bench.py  compare.py  export.py  quantize.py  runner.py
src/quant_explorer/quant/: __init__.py  _base.py  dynamic.py  qat.py  static_per_channel.py  static_per_tensor.py
src/quant_explorer/report/: __init__.py  json_emit.py  pareto.py
tests/e2e/: test_full_pipeline.sh
tests/integration/: test_pipeline_tiny.py
tests/unit/: test_accuracy.py  test_accuracy_properties.py  test_cross_runtime.py  test_json_emit.py  test_latency.py  test_memory.py  test_model.py  test_multi_model.py  test_pareto.py  test_pareto_properties.py  test_qat.py  test_quant_registry.py  test_size.py  test_train_helpers.py
