[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-explorer"
version = "0.1.0"
description = "PyTorch post-training quantization explorer for a CIFAR-10 CNN"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Sai Asish Y" }]
dependencies = [
    "torch==2.2.2",
    "torchvision==0.17.2",
    "click>=8.1",
    "psutil>=5.9",
    "numpy<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.8",
    "pre-commit>=3.6",
    "types-psutil",
]

[project.scripts]
quant-explorer = "quant_explorer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
quant_explorer = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4", "RUF"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/quant_explorer"]
plugins = []

[[tool.mypy.overrides]]
module = ["torchvision.*", "torch.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: end-to-end tests gated on RUN_INTEGRATION=1",
]

[tool.coverage.run]
source = ["src/quant_explorer"]
branch = false

[tool.coverage.report]
# Coverage gate: pre-v1 baseline was 51%; v1 added Hypothesis property tests
# for the Pareto frontier and per-class accuracy aggregator + auxiliary
# round-trip tests, lifting overall coverage to ~59% (gate is +5pp = 56).
fail_under = 56
show_missing = false
